# micro-profile-engine-rs

./: Cargo.toml  build.rs
cpp/: stft1aMM  wrapper.h
src/: dynamics.rs  engine.rs  exit_trigger.rs  main.rs  sampler.rs  sensor.rs  simplified_profile_engine.rs
src/profile/: dynamics.rs  exit_trigger.rs  mod.rs  profile.rs  profile_definition.rs  profile_generator.rs  stage.rs  types.rs
