[package]
name = "micro-profile-engine-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
#arduino-json-rs = { path = "../arduino-json-rs/" }
json = "0.12.4"

cxx = "1.0"
[build-dependencies]
bindgen = "0.70.1"
cxx-build = "1.0"
cc = "1.0"
reqwest = { version = "0.12.9", features = ["blocking"] }
